rust/macros/tests/invalid/target/debug/deps/single_argument_rs-46e2eaf7870f0499.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/single_argument_rs-46e2eaf7870f0499: single-argument.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/single_argument_rs-46e2eaf7870f0499.d: single-argument.rs

single-argument.rs:
